crates/ruff/tests/snapshots/lint__output_format_full.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - full
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
F401 [*] `os` imported but unused
 --> input.py:1:8
  |
1 | import os  # F401
  |        ^^
2 | x = y      # F821
3 | match 42:  # invalid-syntax
  |
help: Remove unused import: `os`

F821 Undefined name `y`
 --> input.py:2:5
  |
1 | import os  # F401
2 | x = y      # F821
  |     ^
3 | match 42:  # invalid-syntax
4 |     case _: ...
  |

SyntaxError: Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)
 --> input.py:3:1
  |
1 | import os  # F401
2 | x = y      # F821
3 | match 42:  # invalid-syntax
  | ^^^^^
4 |     case _: ...
  |

Found 3 errors.
[*] 1 fixable with the `--fix` option.

----- stderr -----
