crates/ruff/tests/snapshots/lint__output_format_gitlab.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - gitlab
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - input.py
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "check_name": "F401",
    "description": "F401: `os` imported but unused",
    "fingerprint": "4dbad37161e65c72",
    "location": {
      "path": "input.py",
      "positions": {
        "begin": {
          "column": 8,
          "line": 1
        },
        "end": {
          "column": 10,
          "line": 1
        }
      }
    },
    "severity": "major"
  },
  {
    "check_name": "F821",
    "description": "F821: Undefined name `y`",
    "fingerprint": "7af59862a085230",
    "location": {
      "path": "input.py",
      "positions": {
        "begin": {
          "column": 5,
          "line": 2
        },
        "end": {
          "column": 6,
          "line": 2
        }
      }
    },
    "severity": "major"
  },
  {
    "check_name": "invalid-syntax",
    "description": "invalid-syntax: Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)",
    "fingerprint": "e558cec859bb66e8",
    "location": {
      "path": "input.py",
      "positions": {
        "begin": {
          "column": 1,
          "line": 3
        },
        "end": {
          "column": 6,
          "line": 3
        }
      }
    },
    "severity": "major"
  }
]
----- stderr -----
