crates/ruff/tests/snapshots/lint__pyflakes_unused_lazy_import.snap
---
source: crates/ruff/tests/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--select"
    - F401
    - "--preview"
    - "--unsafe-fixes"
    - "--fix"
    - bug/
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
Found 1 error (1 fixed, 0 remaining).

----- stderr -----
